1. Dictionary table create and insert value from file 2. Section table create and insert value from file 3. Inventory table create and insert value from file 4. Setting, Current list tables create but insertion in progress

--- a/ShopNote/app/src/main/res/layout/fragment_three.xml
+++ b/ShopNote/app/src/main/res/layout/fragment_three.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ingentive.pro.myapp.ThreeFragment">
+    tools:context="com.ingentive.shopnote.ThreeFragment">
 
     <TextView
         android:layout_width="wrap_content"
