--- a/ShopNote/app/src/main/res/layout/fragment_contact.xml
+++ b/ShopNote/app/src/main/res/layout/fragment_contact.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.ingentive.pro.myapp.ContactFragment">
+    tools:context="com.ingentive.shopnote.ContactFragment">
 
 
     <ListView
