--- a/ShopNote/app/src/main/res/layout/fragment_name.xml
+++ b/ShopNote/app/src/main/res/layout/fragment_name.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.ingentive.pro.myapp.NameFragment">
+    tools:context="com.ingentive.shopnote.NameFragment">
 
     <ListView
         android:id="@+id/listView_name"
