--- a/ShopNote/app/src/main/res/layout/fragment_two.xml
+++ b/ShopNote/app/src/main/res/layout/fragment_two.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ingentive.pro.myapp.TwoFragment">
+    tools:context="com.ingentive.shopnote.TwoFragment">
 
     <TextView
         android:layout_width="wrap_content"
