--- a/ShopNote/app/src/main/res/layout/tab_layout.xml
+++ b/ShopNote/app/src/main/res/layout/tab_layout.xml
@@ -11,7 +11,7 @@
         android:layout_weight="7"
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp">
 
     </android.support.v4.view.ViewPager>
     <android.support.design.widget.TabLayout
@@ -23,6 +23,6 @@
         app:tabTextColor="@color/colorAccent"
         android:layout_width="match_parent"
         android:layout_alignParentBottom="true"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp">
     </android.support.design.widget.TabLayout>
 </LinearLayout>
