--- a/ShopNote/app/src/main/res/layout/fragment_list.xml
+++ b/ShopNote/app/src/main/res/layout/fragment_list.xml
@@ -4,12 +4,9 @@
     android:layout_height="match_parent"
     tools:context="com.ingentive.shopnote.fragments.ListFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="List"
-        android:textSize="40dp"
-        android:textStyle="bold"
-        android:layout_centerInParent="true"/>
+    <ListView
+        android:id="@+id/lv_list"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"/>
 
 </RelativeLayout>
