--- a/ShopNote/app/src/main/res/layout/tab_layout.xml
+++ b/ShopNote/app/src/main/res/layout/tab_layout.xml
@@ -11,18 +11,18 @@
         android:layout_weight="7"
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="0dp">
+        android:layout_height="wrap_content">
 
     </android.support.v4.view.ViewPager>
     <android.support.design.widget.TabLayout
         android:layout_weight="3"
+        android:layout_height="100dp"
         android:id="@+id/tabs"
-        android:background="@color/colorPrimary"
-        app:tabIndicatorColor="@color/colorAccent"
+        android:background="#212121"
+        app:tabIndicatorColor="#212121"
         app:tabSelectedTextColor="#FFFFFF"
-        app:tabTextColor="@color/colorAccent"
+        app:tabTextColor="@android:color/white"
         android:layout_width="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_height="0dp">
+        android:layout_alignParentBottom="true">
     </android.support.design.widget.TabLayout>
 </LinearLayout>
