--- a/ShopNote/app/src/main/res/menu/menu_main.xml
+++ b/ShopNote/app/src/main/res/menu/menu_main.xml
@@ -4,8 +4,9 @@
     tools:context=".MainActivity">
 
     <item
-        android:id="@+id/action_settings"
-        android:title="@string/action_settings"
+        android:id="@+id/action_add"
+        android:title="Add"
+        android:icon="@drawable/add_menu"
         android:orderInCategory="100"
-        app:showAsAction="never" />
+        app:showAsAction="always" />
 </menu>
