ToolBar Title fully working

--- a/ShopNote/app/src/main/res/layout/activity_main.xml
+++ b/ShopNote/app/src/main/res/layout/activity_main.xml
@@ -4,13 +4,13 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
+    android:fitsSystemWindows="false"
     android:elevation="7dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
+        android:fitsSystemWindows="false"
         tools:context=".MainActivity">
         <include
             android:id="@+id/app_bar"
