--- a/ShopNote/app/src/main/res/layout/toolbar.xml
+++ b/ShopNote/app/src/main/res/layout/toolbar.xml
@@ -8,4 +8,23 @@
     android:minHeight="?attr/actionBarSize"
     local:popupTheme="@style/ThemeOverlay.AppCompat.Light"
     local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >
+
+    <TextView
+        android:id="@+id/textview_title_toolbar"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="My First Note"
+        android:textSize="25sp"
+        android:textColor="#ffffff"
+        android:gravity="center_horizontal"
+        />
+
+    <EditText
+        android:id="@+id/edittext_toolbar_title"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:visibility="gone"
+        android:text="My First Note"
+        />
+
     </android.support.v7.widget.Toolbar>
