--- a/ShopNote/app/src/main/res/layout/tab_layout.xml
+++ b/ShopNote/app/src/main/res/layout/tab_layout.xml
@@ -8,16 +8,17 @@
     android:weightSum="10">
 
     <android.support.v4.view.ViewPager
-        android:layout_weight="7"
+        android:layout_weight="8"
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
     </android.support.v4.view.ViewPager>
     <android.support.design.widget.TabLayout
-        android:layout_weight="3"
-        android:layout_height="100dp"
+        android:layout_weight="2"
+        android:layout_height="80dp"
         android:id="@+id/tabs"
+        android:background="#212121"
         app:tabIndicatorColor="#212121"
         app:tabSelectedTextColor="#FFFFFF"
         app:tabTextColor="@android:color/white"
