1. navigation ok 2. tabs ckeck

--- a/ShopNote/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/ShopNote/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -21,5 +21,6 @@
             android:id="@+id/drawerList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"/>
+            android:divider="@android:color/white"
+            android:background="@drawable/shopnote_menubg"/>
 </RelativeLayout>
