--- a/ShopNote/app/src/main/res/layout/fragment_sharelist.xml
+++ b/ShopNote/app/src/main/res/layout/fragment_sharelist.xml
@@ -2,12 +2,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.ingentive.shopnote.fragments.DictionaryFragment">
-
+    tools:context="com.ingentive.shopnote.fragments.ShareListFragment">
 
     <ListView
-        android:id="@+id/listView_dictionary"
+        android:id="@+id/lv_feedback"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"/>
 
