--- a/ShopNote/app/src/main/res/layout/fragment_favorits.xml
+++ b/ShopNote/app/src/main/res/layout/fragment_favorits.xml
@@ -4,12 +4,10 @@
     android:layout_height="match_parent"
     tools:context="com.ingentive.shopnote.fragments.FavoritsFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Favorits"
-        android:textSize="40dp"
-        android:textStyle="bold"
+    <ListView
+        android:id="@+id/lv_favorites"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_centerInParent="true"/>
 
 </RelativeLayout>
