--- a/ShopNote/app/src/main/res/layout/custom_row_list.xml
+++ b/ShopNote/app/src/main/res/layout/custom_row_list.xml
@@ -2,13 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/custom_row_list"
     android:layout_width="wrap_content"
-    android:layout_height="30dp"
+    android:layout_height="wrap_content"
     android:background="@drawable/row_border_blue">
 
     <ImageView
         android:id="@+id/ivOpt"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true" />
     <EditText
         android:id="@+id/etQuantity"
@@ -41,14 +41,14 @@
 
     <ImageView
         android:id="@+id/ivFav_selected"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_toLeftOf="@+id/iv_Section"/>
 
     <ImageView
         android:id="@+id/iv_Section"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentRight="true" />
 
 </RelativeLayout>
