--- a/ShopNote/app/src/main/res/layout/activity_add_list.xml
+++ b/ShopNote/app/src/main/res/layout/activity_add_list.xml
@@ -21,7 +21,7 @@
         android:layout_marginLeft="16dp"/>
     <ListView
         android:id="@+id/lv_add_list"
-        android:layout_below="@+id/toolbar_listadd"
+        android:layout_below="@+id/tv_populer_items"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"/>
 
