--- a/ShopNote/app/src/main/res/layout/custom_row_favorites.xml
+++ b/ShopNote/app/src/main/res/layout/custom_row_favorites.xml
@@ -17,14 +17,14 @@
 
     <ImageView
         android:id="@+id/iv_fav"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_toLeftOf="@+id/iv_add"/>
 
     <ImageView
         android:id="@+id/iv_add"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentRight="true" />
 
 </RelativeLayout>
