--- a/ShopNote/app/src/main/res/layout/custom_row_manage_section.xml
+++ b/ShopNote/app/src/main/res/layout/custom_row_manage_section.xml
@@ -2,13 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/custom_row_list"
     android:layout_width="wrap_content"
-    android:layout_height="30dp"
+    android:layout_height="wrap_content"
     android:background="@drawable/row_border_blue">
 
     <ImageView
         android:id="@+id/ivOpt_ms"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true" />
 
     <TextView
@@ -22,8 +22,8 @@
 
     <ImageView
         android:id="@+id/ivSection_ms"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentRight="true" />
 
 </RelativeLayout>
