--- a/ShopNote/app/src/main/res/layout/nav_drawer_row.xml
+++ b/ShopNote/app/src/main/res/layout/nav_drawer_row.xml
@@ -25,7 +25,7 @@
         <ImageView
             android:id="@+id/image"
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:paddingTop="10dp" />
     </RelativeLayout>
