--- a/ShopNote/app/src/main/res/layout/tab_layout.xml
+++ b/ShopNote/app/src/main/res/layout/tab_layout.xml
@@ -18,7 +18,7 @@
         android:layout_weight="2"
         android:layout_height="80dp"
         android:id="@+id/tabs"
-        android:background="#212121"
+        android:background="@drawable/button_shadow"
         app:tabIndicatorColor="#212121"
         app:tabSelectedTextColor="#FFFFFF"
         app:tabTextColor="@android:color/white"
