--- a/ShopNote/app/src/main/res/layout/fragment_shop.xml
+++ b/ShopNote/app/src/main/res/layout/fragment_shop.xml
@@ -4,11 +4,11 @@
     android:layout_height="match_parent"
     tools:context="com.ingentive.shopnote.fragments.ShopFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Shop"
-        android:textSize="40dp"
-        android:textStyle="bold"
-        android:layout_centerInParent="true"/>
+    <ExpandableListView android:id="@+id/expandable_shop_list"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:transcriptMode="alwaysScroll"
+        android:cacheColorHint="#00000000"
+        android:groupIndicator="@drawable/group_indicator"
+        android:listSelector="@android:color/transparent"/>
 </RelativeLayout>
