--- a/ShopNote/app/src/main/res/layout/tab_layout.xml
+++ b/ShopNote/app/src/main/res/layout/tab_layout.xml
@@ -15,9 +15,13 @@
     </android.support.v4.view.ViewPager>
     <android.support.design.widget.TabLayout
         android:id="@+id/tabs"
-        style="@style/MyCustomTabLayout"
-        android:layout_height="140px"
-        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        app:tabMaxWidth="0dp"
+        app:tabGravity="center"
+        app:tabMode="fixed"
+        app:tabPaddingStart="0dp"
+        app:tabPaddingEnd="0dp"
         android:layout_alignParentBottom="true">
     </android.support.design.widget.TabLayout>
 </RelativeLayout>
