solved things 1- Expandable arrow issue 2- Centered the font vertically for expandable list view 3- Removed the pink line for tabs 4- Added proper assets for tab indicators at the bottom 5- Added search for more than 2 characters on ( add activity items )

--- a/ShopNote/app/src/main/res/layout/custom_row_shop_parent.xml
+++ b/ShopNote/app/src/main/res/layout/custom_row_shop_parent.xml
@@ -9,9 +9,11 @@
         android:id="@+id/iv_grab_shop_par"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/maximize"
         android:layout_marginLeft="32dp"
         android:layout_alignParentLeft="true" />
     <TextView
+        android:layout_centerVertical="true"
         android:id="@+id/tv_section_name_par"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
