--- a/ShopNote/app/src/main/res/layout/tab_layout.xml
+++ b/ShopNote/app/src/main/res/layout/tab_layout.xml
@@ -17,6 +17,7 @@
         android:id="@+id/tabs"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        app:tabIndicatorColor="@null"
         app:tabMaxWidth="0dp"
         app:tabGravity="center"
         app:tabMode="fixed"
