All the padding things resolved 1- All the paddings are generic now 2- Changed and made the toolbar proper. 3- Opening and closing of activities resolved 4- Font schanged to sp as they were not right 5- changed the fixed padding right and left to generic padding in the styles filder in values/19/21 folders

--- a/ShopNote/app/src/main/res/layout/activity_add_list.xml
+++ b/ShopNote/app/src/main/res/layout/activity_add_list.xml
@@ -20,6 +20,7 @@
         android:text="Popular Items"
         android:layout_marginLeft="16dp"/>
     <ListView
+        style="@style/MyListActivityDividerHeight"
         android:id="@+id/lv_add_list"
         android:layout_below="@+id/tv_populer_items"
         android:layout_width="fill_parent"
