--- a/ShopNote/app/src/main/res/layout/activity_manage_section.xml
+++ b/ShopNote/app/src/main/res/layout/activity_manage_section.xml
@@ -14,6 +14,7 @@
         android:id="@+id/lv_manage_section"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        style="@style/MyListActivityDividerHeight"
         android:layout_below="@+id/toolbar_manage_section" />
 
     <LinearLayout
@@ -22,15 +23,12 @@
         android:layout_alignParentBottom="true"
         android:background="@drawable/shopnote_bottombar"
         android:orientation="horizontal"
-        android:paddingLeft="16dp"
-        android:paddingTop="8dp"
         android:weightSum="3">
 
         <EditText
             android:id="@+id/et_add_manage_section"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
             android:layout_below="@+id/lv_manage_section"
             android:layout_gravity="center_vertical"
             android:layout_weight="2"
