--- a/ShopNote/app/src/main/res/layout/custom_row_shop_child.xml
+++ b/ShopNote/app/src/main/res/layout/custom_row_shop_child.xml
@@ -3,23 +3,22 @@
     android:id="@+id/custom_row_list"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/row_border_blue">
+    style="@style/MyListActivityRowLayout"
+    >
 
     <TextView
         android:id="@+id/tv_item_name_shop_child"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:gravity="center_vertical"
-        android:layout_marginLeft="16dp"
+        android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
+        android:paddingLeft="114px"
         android:textColor="@android:color/black" />
 
     <ImageView
         android:id="@+id/iv_checkbox_shop_child"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="12px"
         android:layout_alignParentRight="true" />
 
 </RelativeLayout>
