--- a/ShopNote/app/src/main/res/layout/fragment_favorits.xml
+++ b/ShopNote/app/src/main/res/layout/fragment_favorits.xml
@@ -8,6 +8,6 @@
         android:id="@+id/lv_favorites"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_centerInParent="true"/>
+        style="@style/MyListActivityDividerHeight" />
 
 </RelativeLayout>
