--- a/ShopNote/app/src/main/res/layout/nav_drawer_row.xml
+++ b/ShopNote/app/src/main/res/layout/nav_drawer_row.xml
@@ -16,17 +16,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
-            android:layout_gravity="center_vertical"
-            android:gravity="center_vertical"
+            android:layout_centerVertical="true"
             android:textColor="@android:color/white"
-            android:textSize="18px"
-            android:layout_marginTop="12dp"
-            android:textStyle="bold" />
+            android:textSize="18sp"
+            android:layout_marginTop="6dp" />
 
         <ImageView
             android:id="@+id/image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             android:layout_marginRight="16dp"/>
     </RelativeLayout>
