--- a/ShopNote/app/src/main/res/layout/toolbar.xml
+++ b/ShopNote/app/src/main/res/layout/toolbar.xml
@@ -1,19 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:local="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/tools"
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    app:contentInsetLeft="0dp"
+    app:contentInsetStart="0dp"
     android:background="@drawable/tool_bar_background"
     local:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-    local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >
+    local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+    <!--<ImageView-->
+        <!--android:background="@drawable/meat"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content" />-->
 
     <TextView
         android:id="@+id/textview_title_toolbar"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="My First Note"
-        android:textSize="25sp"
+        android:textSize="18sp"
         android:textColor="#ffffff"
         android:gravity="center_horizontal"
         />
@@ -24,6 +32,8 @@
         android:layout_height="fill_parent"
         android:visibility="gone"
         android:text="My First Note"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         />
 
     </android.support.v7.widget.Toolbar>
