--- a/ShopNote/app/src/main/res/layout/toolbar_manage_sections.xml
+++ b/ShopNote/app/src/main/res/layout/toolbar_manage_sections.xml
@@ -1,35 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:local="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/tools"
     android:id="@+id/toolbar_list_add"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/tool_bar_background"
     local:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-    local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >
+    local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <ImageView
-            android:id="@+id/iv_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/back"
-            android:layout_gravity="center_horizontal"
-            android:layout_alignParentLeft="true"/>
+        <!--<ImageView-->
+            <!--android:id="@+id/iv_back"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="left"-->
+            <!--android:background="@drawable/back" />-->
         <TextView
             android:id="@+id/tv_manage_sections"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:gravity="center_vertical"
-            android:layout_gravity="center_vertical"
+            android:gravity="center"
+            android:layout_gravity="center"
             android:text="Manage Sections"
-            android:textSize="35px"
-            android:layout_marginLeft="16dp"
-            android:textStyle="bold"
+            android:textSize="18sp"
             android:textColor="@android:color/white"/>
     </LinearLayout>
 
