--- a/ShopNote/app/src/main/res/layout/tab_layout.xml
+++ b/ShopNote/app/src/main/res/layout/tab_layout.xml
@@ -7,6 +7,7 @@
     android:weightSum="10">
 
     <android.support.v4.view.ViewPager
+        android:layout_above="@+id/tabs"
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
