--- a/ShopNote/app/src/main/res/layout/fragment_list.xml
+++ b/ShopNote/app/src/main/res/layout/fragment_list.xml
@@ -7,7 +7,7 @@
     <com.baoyz.swipemenulistview.SwipeMenuListView
         android:id="@+id/lv_list"
         style="@style/MyListActivityDividerHeight"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"/>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </RelativeLayout>
