--- a/ShopNote/app/src/main/res/layout/tab_layout.xml
+++ b/ShopNote/app/src/main/res/layout/tab_layout.xml
@@ -6,13 +6,13 @@
     android:layout_height="wrap_content"
     android:weightSum="10">
 
-    <android.support.v4.view.ViewPager
+    <com.ingentive.shopnote.model.CustomViewPager
         android:layout_above="@+id/tabs"
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-    </android.support.v4.view.ViewPager>
+    </com.ingentive.shopnote.model.CustomViewPager>
     <android.support.design.widget.TabLayout
         style="@style/MyCustomTabLayout"
         android:id="@+id/tabs"
