history search and favorites search complete

--- a/ShopNote/app/src/main/res/layout/custom_row_history.xml
+++ b/ShopNote/app/src/main/res/layout/custom_row_history.xml
@@ -6,6 +6,15 @@
     android:background="@drawable/row_border_blue">
 
     <TextView
+        android:id="@+id/tv_date_history"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_gravity="center_vertical"
+        android:gravity="center_vertical"
+        android:layout_marginLeft="16dp"
+        android:visibility="gone"
+        android:textColor="@android:color/black" />
+    <TextView
         android:id="@+id/tv_itemname_history"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
