--- a/ShopNote/app/src/main/res/layout/custom_row_list.xml
+++ b/ShopNote/app/src/main/res/layout/custom_row_list.xml
@@ -24,11 +24,11 @@
 
     <TextView
         android:id="@+id/tvQuantity"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:visibility="gone"
-        android:layout_gravity="center_vertical"
-        android:gravity="center_vertical"
+        android:textSize="18sp"
+        android:layout_centerVertical="true"
         android:layout_toRightOf="@id/etQuantity"
         android:textColor="@android:color/black" />
     <TextView
