--- a/ShopNote/app/src/main/res/layout/toolbar_list_add.xml
+++ b/ShopNote/app/src/main/res/layout/toolbar_list_add.xml
@@ -8,20 +8,6 @@
     local:popupTheme="@style/ThemeOverlay.AppCompat.Light"
     local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >
 
-    <!--<AutoCompleteTextView
-        android:id="@+id/autoCompleteTV"
-        android:layout_width="fill_parent"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:textColor="@android:color/black"
-        android:layout_height="fill_parent"
-        android:gravity="left"
-        android:completionThreshold="1"
-        android:background="@android:color/white"
-        >
-    <requestFocus />
-    </AutoCompleteTextView>-->
-
     <EditText
        android:id="@+id/etSearch"
        android:layout_width="fill_parent"
@@ -29,11 +15,17 @@
        android:layout_marginRight="16dp"
        android:textColor="@android:color/black"
        android:layout_height="fill_parent"
-       android:gravity="left"
+        android:gravity="left"
        android:completionThreshold="1"
        android:background="@android:color/white"
        >
    <requestFocus />
    </EditText>
+    <ImageView
+        android:layout_alignParentLeft="true"
+        android:background="@drawable/add_menu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
 
     </android.support.v7.widget.Toolbar>
