--- a/ShopNote/app/src/main/res/menu/menu_main.xml
+++ b/ShopNote/app/src/main/res/menu/menu_main.xml
@@ -1,19 +1,25 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-tools:context=".MainActivity">
-
-<item
-    android:id="@+id/action_add"
-    android:title="Add"
-    android:icon="@drawable/add_menu"
-    android:orderInCategory="100"
-    app:showAsAction="always" />
-<item
-    android:id="@+id/action_search"
-    android:title="Search"
-    android:visible="false"
-    android:icon="@drawable/search"
-    android:orderInCategory="100"
-    app:showAsAction="always" />
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".MainActivity">
+    <item
+        android:id="@+id/action_add"
+        android:icon="@drawable/add_menu"
+        android:orderInCategory="100"
+        android:title="Add"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/action_favorites_search"
+        android:icon="@drawable/search"
+        android:orderInCategory="100"
+        android:title="Search"
+        android:visible="false"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/action_history_search"
+        android:icon="@drawable/search"
+        android:orderInCategory="100"
+        android:title="Search"
+        android:visible="false"
+        app:showAsAction="always" />
 </menu>
